manifest/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
  replicas: 1 
  template: 
    metadata:
      labels:
        app: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
    spec:
      containers:
      - name: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
        image: __IMAGE__:__VERSION__
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
          
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
