manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
  labels:
    app: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: __CI_PROJECT_NAME__-__CI_ENVIRONMENT_SLUG__
  type: ClusterIP
